CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_REQUIRED_STANDARD ON)
SET(CMAKE_DEBUG_POSTFIX "-d")

SET(PROJECT_NAME "sfws")
PROJECT(${PROJECT_NAME} LANGUAGES CXX)

SET(HEADERS TitleBarButtons.hpp SFWS.hpp Utility/Win32Wrapper.hpp ResourceSettings.hpp)
SET(SOURCES TitleBarButtons.cpp SFWS.cpp Utility/Win32Wrapper.cpp)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADERS} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../SFML/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfml-graphics sfml-audio sfml-window sfml-system -L"../SFML/lib")

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../../SFUI/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfui -L"../../SFUI/lib")

